--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,5 +1,5 @@
 .navbar {
-    position: fixed;
+    position: sticky;
     margin: 0 calc(100% * var(--margin-as-ratio-of-width));
     width: calc(100% - 100% * 2 * var(--margin-as-ratio-of-width));
     top: 0;
