--- a/src/pages/Events.css
+++ b/src/pages/Events.css
@@ -1,11 +1,10 @@
 .event-page-container {
-  margin: calc(100% * var(--margin-as-ratio-of-width));
-  padding: 0;
+  flex-grow: 1;
+  margin: 0 calc(100% * var(--margin-as-ratio-of-width));
   display: flex;
   flex-direction: column;
   justify-content: center; 
   align-items: center; 
-  height: 100%; 
 }
 
 .buttons {
@@ -18,6 +17,7 @@
   margin-right: 1em;
   font-size: 2em;
   font-weight: 100;
+  text-align: left;
 }
 
 .button-selected {
